// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocaleController localizing time zone options should append localized time zone labels to the options 1`] = `
<select
  data-action="w-init:ready->w-locale#localizeTimeZoneOptions"
  data-controller="w-locale"
  data-w-locale-server-time-zone-param="Europe/London"
  name="locale-current_time_zone"
>
  
      
  <option
    selected=""
    value=""
  >
    Use server time zone: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Africa/Abidjan"
  >
    Africa/Abidjan: [TZ] ([TZ])
  </option>
  
      
  <option
    value="America/Argentina/Jujuy"
  >
    America/Argentina/Jujuy: [TZ] ([TZ])
  </option>
  
      
  <option
    value="America/Indiana/Knox"
  >
    America/Indiana/Knox: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Antarctica/Rothera"
  >
    Antarctica/Rothera: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Arctic/Longyearbyen"
  >
    Arctic/Longyearbyen: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Asia/Katmandu"
  >
    Asia/Katmandu: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Atlantic/Canary"
  >
    Atlantic/Canary: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Australia/South"
  >
    Australia/South: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Brazil/East"
  >
    Brazil/East: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Canada/Atlantic"
  >
    Canada/Atlantic: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Chile/Continental"
  >
    Chile/Continental: [TZ] ([TZ])
  </option>
  
      
  <option
    value="EST"
  >
    EST: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Etc/GMT-7"
  >
    Etc/GMT-7: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Europe/Brussels"
  >
    Europe/Brussels: [TZ] ([TZ])
  </option>
  
      
  <option
    value="GMT"
  >
    GMT: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Indian/Maldives"
  >
    Indian/Maldives: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Pacific/Tarawa"
  >
    Pacific/Tarawa: [TZ] ([TZ])
  </option>
  
      
  <option
    value="UTC"
  >
    UTC: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Universal"
  >
    Universal: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Zulu"
  >
    Zulu: [TZ] ([TZ])
  </option>
  
    
</select>
`;

exports[`LocaleController should allow updating the time zone options on an uncontrolled select element via events 1`] = `
<select
  data-action="custom:event->w-locale#localizeTimeZoneOptions"
  data-w-locale-server-time-zone-param="Asia/Tokyo"
  name="locale-current_time_zone"
>
  
      
  <option
    selected=""
    value=""
  >
    Use server time zone: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Africa/Abidjan"
  >
    Africa/Abidjan: [TZ] ([TZ])
  </option>
  
      
  <option
    value="America/Argentina/Jujuy"
  >
    America/Argentina/Jujuy: [TZ] ([TZ])
  </option>
  
      
  <option
    value="America/Indiana/Knox"
  >
    America/Indiana/Knox: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Antarctica/Rothera"
  >
    Antarctica/Rothera: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Arctic/Longyearbyen"
  >
    Arctic/Longyearbyen: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Asia/Katmandu"
  >
    Asia/Katmandu: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Atlantic/Canary"
  >
    Atlantic/Canary: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Australia/South"
  >
    Australia/South: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Brazil/East"
  >
    Brazil/East: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Canada/Atlantic"
  >
    Canada/Atlantic: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Chile/Continental"
  >
    Chile/Continental: [TZ] ([TZ])
  </option>
  
      
  <option
    value="EST"
  >
    EST: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Etc/GMT-7"
  >
    Etc/GMT-7: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Europe/Brussels"
  >
    Europe/Brussels: [TZ] ([TZ])
  </option>
  
      
  <option
    value="GMT"
  >
    GMT: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Indian/Maldives"
  >
    Indian/Maldives: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Pacific/Tarawa"
  >
    Pacific/Tarawa: [TZ] ([TZ])
  </option>
  
      
  <option
    value="UTC"
  >
    UTC: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Universal"
  >
    Universal: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Zulu"
  >
    Zulu: [TZ] ([TZ])
  </option>
  
    
</select>
`;

exports[`LocaleController should correctly apply French spacing rules to localized time zone labels 1`] = `
<select
  data-action="w-init:ready->w-locale#localizeTimeZoneOptions"
  data-controller="w-locale"
  data-w-locale-server-time-zone-param="Europe/Paris"
  name="locale-current_time_zone"
>
  
      
  <option
    selected=""
    value=""
  >
    Use server time zone : [TZ] ([TZ])
  </option>
  
      
  <option
    value="Africa/Abidjan"
  >
    Africa/Abidjan : [TZ] ([TZ])
  </option>
  
      
  <option
    value="America/Argentina/Jujuy"
  >
    America/Argentina/Jujuy : [TZ] ([TZ])
  </option>
  
      
  <option
    value="America/Indiana/Knox"
  >
    America/Indiana/Knox : [TZ] ([TZ])
  </option>
  
      
  <option
    value="Antarctica/Rothera"
  >
    Antarctica/Rothera : [TZ] ([TZ])
  </option>
  
      
  <option
    value="Arctic/Longyearbyen"
  >
    Arctic/Longyearbyen : [TZ] ([TZ])
  </option>
  
      
  <option
    value="Asia/Katmandu"
  >
    Asia/Katmandu : [TZ] ([TZ])
  </option>
  
      
  <option
    value="Atlantic/Canary"
  >
    Atlantic/Canary : [TZ] ([TZ])
  </option>
  
      
  <option
    value="Australia/South"
  >
    Australia/South : [TZ] ([TZ])
  </option>
  
      
  <option
    value="Brazil/East"
  >
    Brazil/East : [TZ] ([TZ])
  </option>
  
      
  <option
    value="Canada/Atlantic"
  >
    Canada/Atlantic : [TZ] ([TZ])
  </option>
  
      
  <option
    value="Chile/Continental"
  >
    Chile/Continental : [TZ] ([TZ])
  </option>
  
      
  <option
    value="EST"
  >
    EST : [TZ] ([TZ])
  </option>
  
      
  <option
    value="Etc/GMT-7"
  >
    Etc/GMT-7 : [TZ] ([TZ])
  </option>
  
      
  <option
    value="Europe/Brussels"
  >
    Europe/Brussels : [TZ] ([TZ])
  </option>
  
      
  <option
    value="GMT"
  >
    GMT : [TZ] ([TZ])
  </option>
  
      
  <option
    value="Indian/Maldives"
  >
    Indian/Maldives : [TZ] ([TZ])
  </option>
  
      
  <option
    value="Pacific/Tarawa"
  >
    Pacific/Tarawa : [TZ] ([TZ])
  </option>
  
      
  <option
    value="UTC"
  >
    UTC : [TZ] ([TZ])
  </option>
  
      
  <option
    value="Universal"
  >
    Universal : [TZ] ([TZ])
  </option>
  
      
  <option
    value="Zulu"
  >
    Zulu : [TZ] ([TZ])
  </option>
  
    
</select>
`;

exports[`LocaleController should localize to the current HTML locale and use the server time zone param for the default 1`] = `
<select
  data-action="w-init:ready->w-locale#localizeTimeZoneOptions"
  data-controller="w-locale"
  data-w-locale-server-time-zone-param="Asia/Jakarta"
  name="locale-current_time_zone"
>
  
      
  <option
    selected=""
    value=""
  >
    Use server time zone: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Africa/Abidjan"
  >
    Africa/Abidjan: [TZ] ([TZ])
  </option>
  
      
  <option
    value="America/Argentina/Jujuy"
  >
    America/Argentina/Jujuy: [TZ] ([TZ])
  </option>
  
      
  <option
    value="America/Indiana/Knox"
  >
    America/Indiana/Knox: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Antarctica/Rothera"
  >
    Antarctica/Rothera: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Arctic/Longyearbyen"
  >
    Arctic/Longyearbyen: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Asia/Katmandu"
  >
    Asia/Katmandu: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Atlantic/Canary"
  >
    Atlantic/Canary: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Australia/South"
  >
    Australia/South: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Brazil/East"
  >
    Brazil/East: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Canada/Atlantic"
  >
    Canada/Atlantic: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Chile/Continental"
  >
    Chile/Continental: [TZ] ([TZ])
  </option>
  
      
  <option
    value="EST"
  >
    EST: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Etc/GMT-7"
  >
    Etc/GMT-7: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Europe/Brussels"
  >
    Europe/Brussels: [TZ] ([TZ])
  </option>
  
      
  <option
    value="GMT"
  >
    GMT: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Indian/Maldives"
  >
    Indian/Maldives: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Pacific/Tarawa"
  >
    Pacific/Tarawa: [TZ] ([TZ])
  </option>
  
      
  <option
    value="UTC"
  >
    UTC: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Universal"
  >
    Universal: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Zulu"
  >
    Zulu: [TZ] ([TZ])
  </option>
  
    
</select>
`;

exports[`LocaleController should skip updating the default option if server time zone is not provided 1`] = `
<select
  data-action="w-init:ready->w-locale#localizeTimeZoneOptions"
  data-controller="w-locale"
  name="locale-current_time_zone"
>
  
      
  <option
    selected=""
    value=""
  >
    Use server time zone
  </option>
  
      
  <option
    value="Africa/Abidjan"
  >
    Africa/Abidjan: [TZ] ([TZ])
  </option>
  
      
  <option
    value="America/Argentina/Jujuy"
  >
    America/Argentina/Jujuy: [TZ] ([TZ])
  </option>
  
      
  <option
    value="America/Indiana/Knox"
  >
    America/Indiana/Knox: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Antarctica/Rothera"
  >
    Antarctica/Rothera: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Arctic/Longyearbyen"
  >
    Arctic/Longyearbyen: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Asia/Katmandu"
  >
    Asia/Katmandu: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Atlantic/Canary"
  >
    Atlantic/Canary: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Australia/South"
  >
    Australia/South: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Brazil/East"
  >
    Brazil/East: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Canada/Atlantic"
  >
    Canada/Atlantic: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Chile/Continental"
  >
    Chile/Continental: [TZ] ([TZ])
  </option>
  
      
  <option
    value="EST"
  >
    EST: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Etc/GMT-7"
  >
    Etc/GMT-7: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Europe/Brussels"
  >
    Europe/Brussels: [TZ] ([TZ])
  </option>
  
      
  <option
    value="GMT"
  >
    GMT: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Indian/Maldives"
  >
    Indian/Maldives: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Pacific/Tarawa"
  >
    Pacific/Tarawa: [TZ] ([TZ])
  </option>
  
      
  <option
    value="UTC"
  >
    UTC: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Universal"
  >
    Universal: [TZ] ([TZ])
  </option>
  
      
  <option
    value="Zulu"
  >
    Zulu: [TZ] ([TZ])
  </option>
  
    
</select>
`;
